<resources>
    <string name="app_name">BSS</string>
    <string name="bbsopenimage">BBSOpenImage</string>
    <string name="barrinha_surf_school">Barrinha Surf School</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="Start_Button_Label">Entrar</string>
    <string name="students_Label">Alunos</string>
    <string name="classes_Label">Aulas</string>
    <string name="calendar_Label">Calendário</string>
    <string name="professors_Label">Instrutores</string>
    <string name="background_Label">background</string>

    <!--Navigation-->
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="menu_calendar">Calendar</string>
    <string name="menu_students">Students</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_professors">Professors</string>
    <string name="menu_data">Modalidades &amp; Locais</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Statistic">Estatísticas</string>

    <string name="remove_student_validation">O(a) aluno(a) será removido(a) do sistema. Deseja continuar?</string>
    <string name="remove_professor_validation">O(a) instrutor(a) será removido(a) do sistema. Deseja continuar?</string>
    <string name="multi_selection_label">multiselection</string>

    <string name="edit_sport_label">Editar modalidade</string>
    <string name="edit_spot_label">Editar local</string>

    <!--Material Calendar Viewer-->
    <string name="material_calendar_monday">S</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">Q</string>
    <string name="material_calendar_thursday">Q</string>
    <string name="material_calendar_friday">S</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </array>

    <string name="material_calendar_today_button">Hoje</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>

    <string name="NoScheduledClassesMsg">Não existem aulas ou eventos agendados</string>

    <string name="load_backup">Carregar backup</string>
    <string name="load_backup_validation">Os alunos guardados no ficheiro de backup da bss serão todos registados na aplicação. Deseja continuar?</string>
</resources>