<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.bssapp.ui.calendar.CalendarFragment"
        android:label="@string/calendar_Label"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_students"
        android:name="com.example.bssapp.ui.students.StudentsFragment"
        android:label="@string/students_Label"
        tools:layout="@layout/fragment_students" />

    <fragment
        android:id="@+id/nav_classes"
        android:name="com.example.bssapp.ui.classes.ClassesFragment"
        android:label="@string/classes_Label"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/nav_professors"
        android:name="com.example.bssapp.ui.professors.ProfessorsFragment"
        android:label="@string/professors_Label"
        tools:layout="@layout/fragment_professors" />
</navigation>